ref: clone_page_home_to_next

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.12",
     "antd": "^5.27.0",
+    "axios": "^1.11.0",
+    "axois": "^0.0.1-security",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
